{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 12,
  "lineage": "6c71ea7a-a399-4c77-50ef-3565d2dec4bf",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002213b538b80ca16",
            "arn": "arn:aws:ec2:us-east-1:483527585410:elastic-ip/eipalloc-002213b538b80ca16",
            "domain": "vpc",
            "id": "eipalloc-002213b538b80ca16",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-193-33-73.compute-1.amazonaws.com",
            "public_ip": "44.193.33.73",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eks-cluster-nat-eip-1"
            },
            "tags_all": {
              "Name": "my-eks-cluster-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6b902db0e219b50",
            "arn": "arn:aws:ec2:us-east-1:483527585410:elastic-ip/eipalloc-0c6b902db0e219b50",
            "domain": "vpc",
            "id": "eipalloc-0c6b902db0e219b50",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-203-23-101.compute-1.amazonaws.com",
            "public_ip": "34.203.23.101",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eks-cluster-nat-eip-2"
            },
            "tags_all": {
              "Name": "my-eks-cluster-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b4aa10eaa8eadae",
            "arn": "arn:aws:ec2:us-east-1:483527585410:elastic-ip/eipalloc-02b4aa10eaa8eadae",
            "domain": "vpc",
            "id": "eipalloc-02b4aa10eaa8eadae",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-232-238-27.compute-1.amazonaws.com",
            "public_ip": "34.232.238.27",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eks-cluster-nat-eip-3"
            },
            "tags_all": {
              "Name": "my-eks-cluster-nat-eip-3"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483527585410:internet-gateway/igw-0dd403361c1b7e443",
            "id": "igw-0dd403361c1b7e443",
            "owner_id": "483527585410",
            "tags": {
              "Name": "my-eks-cluster-igw"
            },
            "tags_all": {
              "Name": "my-eks-cluster-igw"
            },
            "vpc_id": "vpc-08f9cdd3fbedc1b33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002213b538b80ca16",
            "association_id": "eipassoc-0f1802af665240b61",
            "connectivity_type": "public",
            "id": "nat-0ac714fbeb61c03a3",
            "network_interface_id": "eni-02775a994bcb1a979",
            "private_ip": "10.0.4.33",
            "public_ip": "44.193.33.73",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0996ac562b2d7c965",
            "tags": {
              "Name": "my-eks-cluster-nat-1"
            },
            "tags_all": {
              "Name": "my-eks-cluster-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6b902db0e219b50",
            "association_id": "eipassoc-0788d36f5f0fad9ec",
            "connectivity_type": "public",
            "id": "nat-0f28c012d7e1be2b6",
            "network_interface_id": "eni-01436bb18d9e31fcb",
            "private_ip": "10.0.5.237",
            "public_ip": "34.203.23.101",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e5b90e5f9b6922b7",
            "tags": {
              "Name": "my-eks-cluster-nat-2"
            },
            "tags_all": {
              "Name": "my-eks-cluster-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b4aa10eaa8eadae",
            "association_id": "eipassoc-0225c2e07d820700d",
            "connectivity_type": "public",
            "id": "nat-0f6f672b99e07a273",
            "network_interface_id": "eni-03587924fcecd6d4d",
            "private_ip": "10.0.6.210",
            "public_ip": "34.232.238.27",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b5689c23663eb58e",
            "tags": {
              "Name": "my-eks-cluster-nat-3"
            },
            "tags_all": {
              "Name": "my-eks-cluster-nat-3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483527585410:route-table/rtb-0a4d9f9c142de3fbe",
            "id": "rtb-0a4d9f9c142de3fbe",
            "owner_id": "483527585410",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-eks-cluster-private-rt"
            },
            "tags_all": {
              "Name": "my-eks-cluster-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f9cdd3fbedc1b33"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483527585410:route-table/rtb-0034b8c4d5ebc4e32",
            "id": "rtb-0034b8c4d5ebc4e32",
            "owner_id": "483527585410",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd403361c1b7e443",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-cluster-public-rt"
            },
            "tags_all": {
              "Name": "my-eks-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f9cdd3fbedc1b33"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056a795f72361a2ab",
            "route_table_id": "rtb-0a4d9f9c142de3fbe",
            "subnet_id": "subnet-059f3bb87e664f362"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007b8d2c499a4eb99",
            "route_table_id": "rtb-0a4d9f9c142de3fbe",
            "subnet_id": "subnet-023d68ec1ba50f5a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06db65c193e26fa1b",
            "route_table_id": "rtb-0a4d9f9c142de3fbe",
            "subnet_id": "subnet-063a246d3ed7f41c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0144c642d7d4dc461",
            "route_table_id": "rtb-0034b8c4d5ebc4e32",
            "subnet_id": "subnet-0996ac562b2d7c965"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d664e7e911f54cf",
            "route_table_id": "rtb-0034b8c4d5ebc4e32",
            "subnet_id": "subnet-0e5b90e5f9b6922b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c15b060f1b191591",
            "route_table_id": "rtb-0034b8c4d5ebc4e32",
            "subnet_id": "subnet-0b5689c23663eb58e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483527585410:subnet/subnet-059f3bb87e664f362",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059f3bb87e664f362",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "483527585410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-private-subnet-1",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-cluster-private-subnet-1",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08f9cdd3fbedc1b33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483527585410:subnet/subnet-023d68ec1ba50f5a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023d68ec1ba50f5a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "483527585410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-private-subnet-2",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-cluster-private-subnet-2",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08f9cdd3fbedc1b33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483527585410:subnet/subnet-063a246d3ed7f41c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063a246d3ed7f41c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "483527585410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-private-subnet-3",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-cluster-private-subnet-3",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08f9cdd3fbedc1b33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483527585410:subnet/subnet-0996ac562b2d7c965",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0996ac562b2d7c965",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "483527585410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-public-subnet-1",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-cluster-public-subnet-1",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08f9cdd3fbedc1b33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483527585410:subnet/subnet-0e5b90e5f9b6922b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5b90e5f9b6922b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "483527585410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-public-subnet-2",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-cluster-public-subnet-2",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08f9cdd3fbedc1b33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483527585410:subnet/subnet-0b5689c23663eb58e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5689c23663eb58e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "483527585410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-public-subnet-3",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-cluster-public-subnet-3",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08f9cdd3fbedc1b33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483527585410:vpc/vpc-08f9cdd3fbedc1b33",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c006aa207b81d69",
            "default_route_table_id": "rtb-0f3853857001dcfd4",
            "default_security_group_id": "sg-0c9b9a7981c5f1975",
            "dhcp_options_id": "dopt-0b7c478329e8fab99",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f9cdd3fbedc1b33",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f3853857001dcfd4",
            "owner_id": "483527585410",
            "tags": {
              "Name": "my-eks-cluster-vpc",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-eks-cluster-vpc",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}